--- a/managedb/.classpath
+++ b/managedb/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.7.0_71"/>
 	<classpathentry kind="lib" path="D:/CCF/libs/eclipse_swt/swt-4.5-win32-win32-x86_64/swt.jar"/>
 	<classpathentry kind="lib" path="D:/CCF/libs/ribbon/com.hexapixel.widgets.ribbon.alphatest.jar"/>
+	<classpathentry kind="lib" path="D:/CCF/libs/javamail-1.4.5/mail.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
